# mesh

./: README.md  pyproject.toml  state_space  state_space.docs
api/openapi/: openapi.yaml
api/openapi/schemas/: event.envelope.schema.json  mesh.signal.schema.json  profile.run.schema.json
api/proto/mesh/v1/: mesh_control.proto
docs/: README.md  SYSTEMD_EVENT_MODEL.md  TOOL_ARCHITECTURE_AND_DEPENDENCIES.md
docs/api/: README.md  openapi.bundle.json  openapi_components.md  ssot_schemas.md
docs/systemd/: README.md  mesh-source-cloudflared.service  mesh-source-cloudflared.timer  mesh-source-pacman.service  mesh-source-pacman.timer
scripts/: derive_openapi.py  export_schemas.py  gen.sh  gen_docs.py  gen_docs.sh  install_xdg_bin.sh  link_xdg_paths.sh
src/mesh/: __init__.py  logging_utils.py  runtime_context.py
src/mesh/cli/: __init__.py  app.py  shared.py
src/mesh/cli/commands/: __init__.py  daemon.py  event.py  profile.py  ssot.py
src/mesh/core/: __init__.py  service.py
src/mesh/runtime/: __init__.py
src/mesh/runtime/sources/: __init__.py  cloudflared.py  pacman.py
src/mesh/ssot/: __init__.py  registry.py  validate.py
src/mesh/ssot/schemas/: event.envelope.schema.json  mesh.signal.schema.json  profile.run.schema.json  schema.index.json
